Implement undo! YEEEEEEEAH

--- a/help.html
+++ b/help.html
@@ -44,7 +44,8 @@
       space/comma/enter. Named commands are:</p>
 
       <blockquote>
-        <p><code>and or not pop drop drop2 swap dup dup2 clear noop</code></p>
+        <p><code>and or not pop drop drop2 swap dup dup2 clear undo
+        noop</code></p>
       </blockquote>
 
       <p>plus these standard (to JavaScript, anyway) math functions:</p>
@@ -87,7 +88,6 @@
   me on Github!</a></p>
   <ul>
     <li><p>Animated visual feedback</p></li>
-    <li><p>Undo</p></li>
     <li><p>Non-float modes (at least money)</p></li>
     <li><p>Remove anything that would gratuitously surprise an HP user</p></li>
     <li><p>Programmability</p></li>
