--- a/help.html
+++ b/help.html
@@ -4,7 +4,21 @@
 <head>
   <title>Tiny RPN Help</title>
   <style>
-    body { width: 42em; margin: auto; }
+    body {
+        height: 100%;
+        background: fixed -webkit-gradient(linear, 0 0, 0 100%,
+            from(#e7eaee), to(#6a6b6e));
+        padding: 1em;
+    }
+    .content {
+        width: 42em;
+        margin: auto;
+        padding: 0.5em 2em;
+        background: #fafafa;
+        border: 1px solid #9d9fa3;
+        -webkit-border-radius: 10px;
+        -webkit-box-shadow: 2px 2px 2px #000000;
+    }
     .ctrlkeys { width: 80%; }
     .ctrlkeys th { text-align: left; }
   </style>
@@ -17,8 +31,8 @@
 </head>
 
 <body onload="init();">
+<div class="content">
   <h1>Tiny RPN</h1>
-
   <p>Tiny RPN is a <a href=
   "http://en.wikipedia.org/wiki/Reverse_Polish_notation">Reverse
   Polish Notation</a> calculator, operated entirely with the keyboard.
@@ -119,5 +133,6 @@
   enough to license it Creative Commons BY-NC. See the source code for
   a complete listing of licenses.) Here's the original:
   <a href="http://www.xkcd.com/645/">Reverse Polish Sausage</a>.</p>
+</div>
 </body>
 </html>
