Radix commands (input, output, reset)

--- a/help.html
+++ b/help.html
@@ -67,7 +67,7 @@
 
       <blockquote>
         <p><code>and or not pop drop drop2 swap dup dup2 clear undo
-        noop</code></p>
+        iradix oradix rradix noop</code></p>
       </blockquote>
 
       <p>plus these standard (to JavaScript, anyway) math functions:</p>
