Restore "proper" ^ and ~, use ` as pow shortcut

--- a/help.html
+++ b/help.html
@@ -90,13 +90,7 @@
           <td>Modulus</td>
         </tr>
         <tr>
-          <td><code>~</code></td>
-          <td>1</td>
-          <td>1</td>
-          <td>Negate</td>
-        </tr>
-        <tr>
-          <td><code>^</code></td>
+          <td><code>`</code></td>
           <td>2</td>
           <td>1</td>
           <td>Raise to power</td>
@@ -114,10 +108,16 @@
           <td>Bitwise OR</td>
         </tr>
         <tr>
-          <td><code>\</code></td>
+          <td><code>^</code></td>
           <td>2</td>
           <td>1</td>
           <td>Bitwise XOR</td>
+        </tr>
+        <tr>
+          <td><code>~</code></td>
+          <td>1</td>
+          <td>1</td>
+          <td>Bitwise inverse</td>
         </tr>
       </table>
     </li>
@@ -136,6 +136,12 @@
           <th>Pops</th>
           <th>Pushes</th>
           <th>Description</th>
+        </tr>
+        <tr>
+          <td><code>neg</code></td>
+          <td>1</td>
+          <td>1</td>
+          <td>Arithmetic negation</td>
         </tr>
         <tr>
           <td><code>and</code></td>
