Options page for defining custom ops in JS

--- a/help.html
+++ b/help.html
@@ -3,25 +3,7 @@
 <html>
 <head>
   <title>Tiny RPN Help</title>
-  <style>
-    body {
-        height: 100%;
-        background: fixed -webkit-gradient(linear, 0 0, 0 100%,
-            from(#e7eaee), to(#6a6b6e));
-        padding: 1em;
-    }
-    .content {
-        width: 42em;
-        margin: auto;
-        padding: 0.5em 2em;
-        background: #fafafa;
-        border: 1px solid #9d9fa3;
-        -webkit-border-radius: 10px;
-        -webkit-box-shadow: 2px 2px 2px #000000;
-    }
-    table { width: 80%; margin: auto; }
-    th { background: #eee; text-align: left; }
-  </style>
+  <link rel="stylesheet" type="text/css" href="options.css" />
   <script>
     function init() {
         document.getElementById('applink').href =
@@ -396,7 +378,7 @@
     <li><p>Animated visual feedback</p></li>
     <li><p>Non-float modes (at least money)</p></li>
     <li><p>Remove anything that would gratuitously surprise an HP user</p></li>
-    <li><p>Programmability</p></li>
+    <li><p>Macros</p></li>
     <li><p>Hooks to open web sites (e.g. Google currency conversion)</p></li>
   </ul>
 
