Should probably have a way to get back to help.html

--- a/options.html
+++ b/options.html
@@ -18,6 +18,7 @@
 <body onload="init();">
 <div class="content">
   <h1>Options</h1>
+  <p>(Looking for the <a href="help.html">help page</a>?)</p>
   <p>Define any custom operators here, by adding attributes to the
   already-defined object <code>ops</code>. They should be functions
   following these rules:</p>
