Make fact standard, move pow alias to custom

--- a/options.html
+++ b/options.html
@@ -40,7 +40,7 @@
   of <code>inputRadix</code>, <code>outputRadix</code>,
   or <code>termSep</code> (a regex).</p>
   <p><textarea id="custom" rows="24" cols="80"></textarea><br />
-  <input type="button" onclick="save();" value="Save"/></p>
+  <input type="button" onclick="save();" value="Save Options"/></p>
 </div>
 </body>
 </html>
