--- a/options.html
+++ b/options.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <title>Tiny RPN Options</title>
-  <link rel="stylesheet" type="text/css" href="options.css" />
+  <link rel="stylesheet" type="text/css" href="common/options.css" />
   <script>
     function init() {
         if (localStorage.customOps);
@@ -16,12 +16,14 @@
 </head>
 
 <body onload="init();">
-<div class="content">
   <h1>Options</h1>
+
   <p>(Looking for the <a href="help.html">help page</a>?)</p>
+
   <p>Define any custom operators here, by adding attributes to the
   already-defined object <code>ops</code>. They should be functions
   following these rules:</p>
+
   <ol>
     <li><p>Take the number of arguments that you want popped from the stack.
     They will be applied to you in bottom-up order.</p></li>
@@ -31,16 +33,23 @@
     <li><p>If you have side effects, don't return anything, just create a
     new head (nothing will be pushed onto the undo list above it).</p></li>
   </ol>
+
   <p>Single-character operator names will dispatch as soon as their
   key is pressed. Be careful! I recommend only using punctuation for
   this.</p>
+
   <p>To define a new control-key binding, add an attribute (which must
   be an uppercase letter) to <code>ctrlBindings</code>.</p>
+
   <p>You can also change the default values
   of <code>inputRadix</code>, <code>outputRadix</code>,
   or <code>termSep</code> (a regex).</p>
-  <p><textarea id="custom" rows="24" cols="80"></textarea><br />
-  <input type="button" onclick="save();" value="Save Options"/></p>
-</div>
+
+  <p><textarea id="custom" rows="24" cols="80"></textarea></p>
+
+  <div class="actions">
+    <p><input type="button" onclick="save();" value="Save Options"/></p>
+  </div>
+
 </body>
 </html>
