--- a/background.html
+++ b/background.html
@@ -1,9 +1,2 @@
-<!DOCTYPE html>
-
-<html>
-  <head>
-    <script src="background.js"></script>
-  </head>
-  <body>
-  </body>
-</html>
+<script src="common/config.js"></script>
+<script src="background.js"></script>
