--- a/options.html
+++ b/options.html
@@ -4,15 +4,8 @@
 <head>
   <title>Tiny RPN Options</title>
   <link rel="stylesheet" type="text/css" href="common/options.css" />
-  <script>
-    function init() {
-        if (localStorage.customOps);
-            document.getElementById('custom').value = localStorage.customOps;
-    }
-    function save() {
-        localStorage.customOps = document.getElementById('custom').value;
-    }
-  </script>
+  <script src="common/config.js"></script>
+  <script src="options.js"></script>
 </head>
 
 <body onload="init();">
