--- a/popup.html
+++ b/popup.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
+
 <html>
 <head>
-<title>Tiny RPN</title>
-<link rel="stylesheet" href="popup.css" />
-<script src="tiny-rpn.js"></script>
+  <title>Tiny RPN</title>
+  <link rel="stylesheet" href="popup.css" />
+  <script src="common/config.js"></script>
+  <script src="tiny-rpn.js"></script>
 </head>
+
 <body onload="init();">
-<p class="container">
-  <input type="text" id="entry" onkeydown="keyDown(event);"
-    onkeypress="keyPress(event);" />
-</p>
-<ol id="stack">
-</ol>
-<p id="error"></p>
+  <p class="container">
+    <input type="text" id="entry" onkeydown="keyDown(event);"
+           onkeypress="keyPress(event);" />
+  </p>
+  <ol id="stack">
+  </ol>
+  <p id="error"></p>
 </body>
 </html>
