Document strings and convert

--- a/help.html
+++ b/help.html
@@ -26,6 +26,9 @@
       <p>To enter several numbers, separate them with spaces or commas, or
       press Enter/Return after each one. Negative numbers can be entered by
       using a leading underscore.</p>
+      <p>To enter strings, surround them with double quotes ("). When
+      typing a string, separators and operators will not do anything
+      special.</p>
     </li>
 
     <li>
@@ -207,6 +210,13 @@
           <td>0</td>
           <td>0</td>
           <td>Reset input/output radixes to 10</td>
+        </tr>
+        <tr>
+          <td><code>convert</code></td>
+          <td>3</td>
+          <td>1</td>
+          <td>Pops a number and two strings, performs unit/currency
+          conversion using Google</td>
         </tr>
         <tr>
           <td><code>noop</code></td>
