--- a/help.html
+++ b/help.html
@@ -2,6 +2,7 @@
 
 <html>
 <head>
+  <meta charset="utf-8">
   <title>Tiny RPN Help</title>
   <link rel="stylesheet" type="text/css" href="common/options.css" />
   <script>
